feat: #404 Add OAuth2 client credentials as backend secret type
